--- a/indextoslides2.qmd
+++ b/indextoslides2.qmd
@@ -460,9 +460,9 @@ cor(data) %>%
 
 Since the outcome variable (death event) is binary, logistic regression will be used with each of our techniques to fit our models. Two different models will be fit for each technique: one with every predictor variable included (Model 1), and the other using only serum creatinine and ejection fraction (Model 2), as was advised by [@chicco2020machine]. The goal is to compare how the difference in performance between the two models changes when various cross-validation techniques are applied. The performance of the models will be determined using their MSE and AUC values.
 
-## 10-fold Cross Validation:
+## 10-fold Cross Validation - Model 1
 
-```{r}
+```{r, echo=TRUE}
 library(boot)
 auc <- function(obs, pred.p){
   pred <- prediction(pred.p, obs)
@@ -470,47 +470,50 @@ auc <- function(obs, pred.p){
   cost = unlist(slot(performance(pred, "auc"), "y.values"))
   return(cost)
 } 
+
+#Model 1
 set.seed(43269)
 m1 <- glm(DEATH_EVENT ~ age + anaemia + creatinine_phosphokinase + diabetes + ejection_fraction + high_blood_pressure + platelets + serum_creatinine + serum_sodium + sex + smoking + time,
          data = data, 
          family = "binomial"(link = "logit"))
 
 k10_m1_mse <- cv.glm(data, m1, K=10)$delta
-
-
 k10_m1_auc <- cv.glm(data, m1, K=10, cost=auc)$delta
 
+```
 
+With any variation of k-fold cross validation, the dataset is split into
+k sized folds that will all be equal. The function used to create our cross-validation was cv.glm, which only requires your data, the glm model, and the number of folds for the cross validation. Here, the dataset is split in 10 folds. As previously discussed, [@wong2019reliable] mentions 10-fold
+cross validation analysis to be most effective in most cases. Our glm model was changed from a linear regression to logistic, since our outcome variable is binary. In model
+1, all predictor variables are included. The default metric for cv.glm is MSE, so a cost function was created to calculate the AUC values for the models. This cost function will be used for both k-folds and LOOCV. 
 
+## 10-fold Cross Validation - Model 2
+
+```{r, echo=TRUE}
+# Model 2
 set.seed(85329)
 m2 <- glm(DEATH_EVENT ~ ejection_fraction + serum_creatinine,
          family = "binomial"(link = "logit"), data=data)
 
 k10_m2_mse <- cv.glm(data, m2, K=10)$delta
-
-
 k10_m2_auc <- cv.glm(data=data, glmfit=m2, cost=auc, K=10)$delta
+```
+In model 2, only ejection fraction and serum creatinine are included, as the researchers that
+provided the data set came to the conclusion that death events could be
+predicted using those 2 variables alone.
 
+## 10-fold Cross Validation - Performance
 
+```{r}
 k10tibble = tibble(M1_K5_MSE = k10_m1_mse[2], M2_K5_MSE = k10_m2_mse[2], M1_K5_AUC = k10_m1_auc[2], M2_K5_AUC = k10_m2_auc[2])
 k10tibble
 ```
+Interestingly enough, the first model that included all variables produced a lower MSE and a higher AUC, indicating that from this CV test, model one would be better to
+use than model 2. Model 2 has an AUC that is still acceptable, but the AUC of the first model is significantly better.
 
-With any variation of k-fold cross validation, the dataset is split into
-k sized folds that will all be equal. Here, the dataset is split in 10
-folds. As previously discussed, [@wong2019reliable] mentions 10-fold
-cross validation analysis to be most effective in most cases. In model
-1, all predictor variables are included. In model 2, only ejection
-fraction and serum creatinine are included, as the researchers that
-provided the data set came to the conclusion that death events could be
-predicted using those 2 variables alone. Interestingly enough, the first
-model that included all variables produced a lower MSE (mean square
-error), indicating that from this CV test, model one would be better to
-use than model 2.
+## 5-fold Cross Validation - Model 1
 
-## 5-fold Cross Validation:
-
-```{r}
+```{r, echo=TRUE}
 library(boot)
 
 set.seed(143269)
@@ -519,34 +522,41 @@ m1 <- glm(DEATH_EVENT ~ age + anaemia + creatinine_phosphokinase + diabetes + ej
          family = "binomial"(link = "logit"))
 
 k5_m1_mse <- cv.glm(data, m1, K=5)$delta
-
 k5_m1_auc <- cv.glm(data, m1, K=5, cost=auc)$delta
 
+```
+
+Similar to the 10-fold models above, our dataset is split into equal
+pieces using cv.glm. However, in this case, we are only doing 5 folds compared to our
+10-fold analysis. Again, in model 1, all predictor variables are
+included.
+
+## 5-fold Cross Validation - Model 2
+
+```{r, echo=TRUE}
 set.seed(185329)
 m2 <- glm(DEATH_EVENT ~ ejection_fraction + serum_creatinine,
          data = data, 
          family = "binomial"(link = "logit"))
 
 k5_m2_mse <- cv.glm(data, m2, K=5)$delta
-
 k5_m2_auc <- cv.glm(data, m2, K=5, cost=auc)$delta
-
-k5tibble = tibble(M1_K5_MSE = k5_m1_mse[2], M2_K5_MSE = k5_m2_mse[2], M1_K5_AUC = k5_m1_auc[2], M2_K5_AUC = k5_m2_auc[2])
-k5tibble
-
 ```
 
-Similar to the 10-fold models above, our dataset is split into equal
-pieces. However, in this case, we are only doing 5 folds compared to our
-10-fold analysis above. Again, in model 1, all predictor variables are
-included. In model 2, only ejection fraction and serum creatinine are
-included. With 5-fold cross validation, the data set is divided into 5
-parts (as opposed to 10 in 10-fold). Model 1 still has a lower MSE than
-the full model that includes all predictor variables.
+In model 2, only ejection fraction and serum creatinine are
+included. 
 
-## Single Hold-Out Method:
+## 5-fold Cross Validation - Performance
 
 ```{r}
+k5tibble = tibble(M1_K5_MSE = k5_m1_mse[2], M2_K5_MSE = k5_m2_mse[2], M1_K5_AUC = k5_m1_auc[2], M2_K5_AUC = k5_m2_auc[2])
+k5tibble
+```
+Model 1 once again performed the best based on its MSE and AUC values. Both AUC values are acceptable, and their MSE's are fairly low. However, model 1's ACU is significantly better.
+
+## Single Hold-Out Method - Test/Train Split & Model Creation
+
+```{r, echo=TRUE}
 #add obs # for each row
 library(dplyr)
 data_SHO <- data %>%
@@ -568,7 +578,14 @@ m1_SHO <- glm(DEATH_EVENT ~ age + anaemia + creatinine_phosphokinase + diabetes 
 m2_SHO <- glm(DEATH_EVENT ~ ejection_fraction + serum_creatinine,
          data = training_SHO, 
          family = "binomial"(link = "logit"))
+```
 
+Using the Single Hold-Out Method, the data set is split into a training
+set and a test/validation set. Since the cv.glm function only applies to k-fold cross-validation, the splitting of the data will be done manually. Here, we are using a 50-50 split. Our functions for creating each model was identical to our previous techniques, using glm() to perform logistic regression.
+
+## Single Hold-Out Method - MSE & AUC Calculation
+
+```{r, echo=TRUE}
 #calculate MSE
 validation_SHO <- validation_SHO %>% 
   mutate(yhat_m1_SHO = predict(m1_SHO, newdata = validation_SHO),
@@ -577,8 +594,6 @@ validation_SHO <- validation_SHO %>%
          sqerr_m2_SHO = (yhat_m2_SHO - DEATH_EVENT)^2) %>%
   relocate(obs, DEATH_EVENT, yhat_m1_SHO, sqerr_m1_SHO, yhat_m2_SHO, sqerr_m2_SHO)
 
-#head(validation_SHO)
-
 SHO_m1_mse <- mean(validation_SHO$sqerr_m1_SHO, na.rm = TRUE)
 SHO_m2_mse <- mean(validation_SHO$sqerr_m2_SHO, na.rm = TRUE)
 
@@ -586,61 +601,65 @@ SHO_m2_mse <- mean(validation_SHO$sqerr_m2_SHO, na.rm = TRUE)
 SHO_m1_auc = auc(validation_SHO$DEATH_EVENT,validation_SHO$yhat_m1_SHO)
 SHO_m2_auc = auc(validation_SHO$DEATH_EVENT,validation_SHO$yhat_m2_SHO)
 
+```
+
+The models were applied to the validation set to find the predicted outcome values. The means of the squared errors of our predicted values was found for each model. To calculate the AUC values, we only needed to use the auc() function with the original outcome variable and the predicted outcome variables of our validation set.
+
+## Single Hold-Out Method - Performance
+
+```{r}
 SHOtibble = tibble(M1_SHO_MSE = SHO_m1_mse, M2_SHO_MSE = SHO_m2_mse, M1_SHO_AUC = SHO_m1_auc, M2_SHO_AUC = SHO_m2_auc)
 SHOtibble
 ```
-
-Using the Single Hold-Out Method, the data set is split into a training
-set and a test/validation set. Here, we are using a 50-50 split. After
-conducting the analysis, it can be seen that model 2 provides us with a
-lower mean squared error. Model 2 includes only ejection fraction and
+After conducting the analysis, it can be seen that model 2 provides us with a
+significantly lower mean squared error. Both models have very similar AUC values, with the first model only producing a marginally higher value. Model 2 includes only ejection fraction and
 serum creatinine as predictor variables, meaning this reduced model is a
-better fit according to this cross-validation technique.
+better fit according to this cross-validation technique. This result aligns with the opinion of the original article this data was sourced from.
 
-## Leave-One-Out Cross-Validation (LOOCV):
+## Leave-One-Out Cross-Validation (LOOCV)
 
-```{r}
+```{r, echo=TRUE}
+cost <- function(labels,pred){
+ mean(labels==ifelse(pred > 0.5, 1, 0))
+}
+# Model 1
 set.seed(7432)
 m1 <- glm(DEATH_EVENT ~ age + anaemia + creatinine_phosphokinase + diabetes + ejection_fraction + high_blood_pressure + platelets + serum_creatinine + serum_sodium + sex + smoking + time,
          data = data, 
          family = "binomial"(link = "logit"))
 
 loocv_m1_mse <- cv.glm(data, m1)$delta
-
-cost <- function(labels,pred){
- mean(labels==ifelse(pred > 0.5, 1, 0))
-}
 loocv_m1_auc <- cv.glm(data, m1, cost = cost)$delta
-
+# Model 2
 set.seed(20987)
 m2 <- glm(DEATH_EVENT ~ ejection_fraction + serum_creatinine,
          data = data, 
          family = "binomial"(link = "logit"))
 
 loocv_m2_mse <- cv.glm(data, m2)$delta
-
 loocv_m2_auc <- cv.glm(data, m2, cost = cost)$delta
-
-loocv_tibble <- tibble("M1 LOOCV MSE" = loocv_m1_mse[2], "M2 LOOCV MSE" = loocv_m2_mse[2], "M1 LOOCV AUC" = loocv_m1_auc[2], "M2 LOOCV AUC" = loocv_m2_auc[2])
-loocv_tibble
-
 ```
-
 Leave-One-Out cross-validation (LOOCV) follows a similar data set
-splitting technique, but in this case, the data is split k-ways, where k
-is equal to the number of data points. In this case, k would be 299. According to LOOCV, the full
-model (which includes all predictor variables) is a better fit due to a
-lower mean squared error compared to the reduced model (which only
-includes serum creatinine and ejection fraction).
+splitting technique to the previous k-fold examples, but in this case, the data is split k-ways, where k
+is equal to the number of data points. In this case, k would be 299. Since LOOCV is a form of k-folds, cv.glm can be used for data splitting. The "K=" argument isn't necessary when performing LOOCV, as the function assumes that the number of folds will be equal to the number of observations. Once again, the cost function is used to find our AUC values. The same function (glm()) was used to fit our logistic regression models as the other k-fold techniques. Once again, the processes for both models was identical apart from the number of predictors included in the models.
 
-## Monte Carlo Cross-Validation:
+## Leave-One-Out Cross-Validation (LOOCV) - Performance
 
 ```{r}
+loocv_tibble <- tibble("M1 LOOCV MSE" = loocv_m1_mse[2], "M2 LOOCV MSE" = loocv_m2_mse[2], "M1 LOOCV AUC" = loocv_m1_auc[2], "M2 LOOCV AUC" = loocv_m2_auc[2])
+loocv_tibble
+```
+
+According to LOOCV, the full model (M1) is a better fit due to a
+lower MSE compared to the reduced model (M2). The AUC models follow a similar pattern, with model 1 having a higher AUC than model 2.
+
+## Monte Carlo Cross-Validation - Resampling Function & Model Creation
+
+```{r, echo=TRUE}
 data$DEATH_EVENT=as.factor(data$DEATH_EVENT)
 set.seed(30)
 resample1 <- mc_cv(data, times = 100, prop = .7)
 
-m1_recipe <- recipe(DEATH_EVENT ~ ., data = data)
 mccv_model <- logistic_reg() %>% #creating classification model
   set_engine("glm") %>%
   set_mode("classification")
@@ -654,27 +673,38 @@ m2_wflow <- # adding variables for model 2
   add_formula(
     DEATH_EVENT ~ ejection_fraction + serum_creatinine) %>%
   add_model(mccv_model)
+```
 
+Unlike previous techniques, a mc_cv function was created to repeat the splitting of the data many times. Our proportion of training to validation sets is the standard 70/30 split, and the data will be resampled 100 times. Workflows were used to specify our model type (logistic regression), as and plug in the variables for each of our models.
 
+## Monte Carlo Cross-Validation - Resampling & Metric Calculation
 
+```{r, echo=TRUE}
 keep_pred <- control_resamples(save_pred = TRUE, save_workflow = TRUE)
 set.seed(30)
 m1_MCCV <-m1_wflow %>% fit_resamples(resamples = resample1, control = keep_pred)
 m1_MCCV_metrics <- collect_metrics(m1_MCCV)
+
 mccv_m1_mse <- as.numeric(m1_MCCV_metrics[2,3])
 mccv_m1_auc <- as.numeric(m1_MCCV_metrics[3,3])
+
 m2_MCCV <- m2_wflow %>% fit_resamples(resamples = resample1, control = keep_pred)
 m2_MCCV_metrics <-collect_metrics(m2_MCCV)
+
 mccv_m2_mse <- as.numeric(m2_MCCV_metrics[2,3])
 mccv_m2_auc <- as.numeric(m2_MCCV_metrics[3,3])
 ```
+
+The fit_resamples() function applies our resampling function created earlier to our models to perform our cross-validation. For the MSE of the models, we'll be using the Brier score as our resampling fitting function generates the Brier score automatically, and it performs similarly to MSE in classification problems [@ferro2012bias].
+
+## Monte Carlo Cross-Validation - Performance
 
 ```{r}
 MCCVtibble = tibble(M1_MCCV_MSE = mccv_m1_mse, M2_MCCV_MSE = mccv_m2_mse, M1_MCCV_AUC= mccv_m1_auc, M2_MCCV_AUC= mccv_m2_auc)
 MCCVtibble
 ```
 
-For the Monte Carlo technique, logistic regression will be used to create the models. Unlike previous techniques, a resampling function was created to repeat the splitting of the data many times. Our proportion of training to validation sets is the standard 70/30 split, and the data will be resampled 100 times. For the MSE of the models, we'll be using the Brier score as our resampling fitting function generates the Brier score automatically, and it performs similarly to MSE in classification problems [@ferro2012bias]. Similar to the previously discussed techniques, our full model had the lower MSE/ Brier score and higher AUC. The smaller model's AUC of 0.763 is still acceptable as far as the metric's ideal scores go, but the increase of about 0.1 indicates there might be another predictor or two that could contribute significantly to the model.
+Similar to the previously discussed techniques, our full model had the lower MSE/Brier score and higher AUC. The smaller model's AUC of 0.763 is still acceptable as far as the metric's ideal scores go, but the increase of about 0.1 indicates there might be another predictor or two that could contribute significantly to the model.
 
 ## Comparing Technique Performance
 
@@ -689,6 +719,9 @@ MODEL_COMP <- data.frame(
 MODEL_COMP
 ```
 
+The only technique that stands out as having significantly different results was single hold-out cross-validation. It's the only technique that clearly indicated the reduced model as the superior model. The significant difference leads us to believe the simplicity of the technique could have caused some overfitting and higher bias. Other training/testing split ratios could be considered to try to combat this.
+The rest of the techniques performed so similarly with all measures considered, that choosing the technique that best fit and predicted our data is difficult.
+
 ## Conclusion
 
 This paper shows various cross-validation techniques that can be used
@@ -700,20 +733,18 @@ heart attack patients can be predicted using only serum creatinine and
 ejection fraction as predictor variables. The logistic regression analysis
 we conducted using various cross-validation techniques has shown that
 the full model (which includes all predictor variables within the
-dataset) has a lower mean squared error (MSE) after testing. This
-essentially means the full model is more robust with predictive ability
+dataset) tends to have lower mean squared error (MSE) and higher Area under the Curve (AUC) values after testing. This essentially means the full model is more robust with predictive ability
 compared to the reduced model. That being said, the difference in MSEs
 between the two models is marginal, however, the full model by
-technicality does have slightly more predictive ability.
+technicality does have slightly more predictive ability. It also has a better ability to distinguish between classes, whether or not the patient died within their follow-up period.
 
 The marginal difference between models supports the argument made by the
 researchers because the model with two predictor variables and the model
 with twelve predictor variables produced small differences in MSEs as
 seen in the analysis above; models with less predictor variables are
-typically preferred in statistical analysis.
+typically preferred in statistical analysis. Since the AUC values did show differences between models, the model could perhaps benefit from some additional predictors. However, the reduced models still demonstrated acceptable class discrimination.
 
-Ultimately, while the k-folds CV technique (particularly 10 folds)
-seemed to perform the best, most of these techniques seem sufficient to
+Single hold-out cross-validation stood out the most as having the worst performance, with MSE values that were significantly higher than that of the rest of the techniques. This result indicates that this technique will not always be the best route to take when trying to validate a model. The rest of the models had only marginal differences in performance. However, when considering the process of administering the techniques, the k-folds, including leave-one-out, provided the most straight-forward approach. Having a function that performed the cross-validation from the logistic regression model removed some of the opportunity for human error. Ultimately, most of these techniques seem sufficient to
 help validate a model based on this example.
 
 ## References
