--- a/indextoslides2.qmd
+++ b/indextoslides2.qmd
@@ -41,29 +41,33 @@ predictions across various data subsets.
 - Stratified Cross-Validation
 - Repeated K-Fold Cross-Validation
 
-## Single Hold-Out Method:
+---
+
+### Single Hold-Out Method:
 This is one of the more simple methods of
 cross-validation and tends to be less time-consuming to conduct
 [@yadav2016analysis]. It divides data into a training set and a test
 set, usually in a 70-30 or 90-10 split.
 
-## Monte Carlo Cross-Validation: 
+### Monte Carlo Cross-Validation: 
 Using random sampling without 
 replacement from certain probability distributions when splitting your
 data sets [@james1980monte]. It aims to decrease overfitting by allowing
 the algorithm to better explore the experimental space.
 
-## K-Fold Cross-Validation:
+---
+
+### K-Fold Cross-Validation:
 The dataset is split into k equally sized
 folds. Each fold is used once as a test set while the rest serve as the
 training set.
 
-## Leave-One-Out Cross-Validation (LOOCV):
+### Leave-One-Out Cross-Validation (LOOCV):
 This is a special case of k-fold cross-validation where k equals the
 number of data points [@shao2016efficient]. Each data point is used once
 as a test set.
 
-## Stratified Cross-Validation:
+### Stratified Cross-Validation:
 Ensures each fold reflects the class proportions in the dataset, particularly
 useful for imbalanced datasets.
 
